--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_url: https://github.com/kingdavidmartins
 # gitlab_url: 
 googleplus_url:
 instagram_url:
-linkedin_url: https://www.linkedin.com/
+linkedin_url: https://www.linkedin.com/in/king-david-martins-08382614a
 pinterest_url:
 slack_url:
 twitter_url:
