--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle:
 email: kingdavidmartins@gmail.com
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "/" # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Street
 city: Manhattan
